# pir-motion-sensor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
examples/multiple-sensors/: Cargo.toml  main.rs
examples/multiple-sensors/src/: main.rs
examples/single-sensor/: main.rs
examples/single-sensor/src/: main.rs
src/sensor/: config.rs  helpers.rs  mod.rs  motion.rs
tests/: bugfixes.rs  invalid_detections.rs  valid_detections.rs
