[package]
name = "pir-motion-sensor"
version = "2.0.3"
edition = "2021"
authors = ["Mateusz Szczyrzyca <mateusz@szczyrzyca.pl>"]
readme = "README.md"
repository = "https://github.com/mateusz-szczyrzyca/pir-motion-sensor/"
description = "Rust Library for PIR motion sensors"
keywords = ["raspberry", "embedded", "iot", "automation", "hardware"]
categories = ["embedded"]
license = "MIT"

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
rppal = "0.19.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"]}
tokio-util = "0.7.12"
