[package]
name = "pir-motion-sensor"
version = "2.1.0"
edition = "2024"
authors = ["Mateusz Szczyrzyca <mateusz@szczyrzyca.pl>"]
readme = "README.md"
repository = "https://github.com/mateusz-szczyrzyca/pir-motion-sensor/"
description = "Rust Library for PIR motion sensors"
keywords = ["raspberry", "embedded", "iot", "automation", "hardware"]
categories = ["embedded"]
license = "MIT"

[dependencies]
chrono = "0.4.40"
env_logger = "0.11.8"
log = "0.4.27"
rppal = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"]}
tokio-util = "0.7.14"
